fix: replace missing color variables

--- a/packages/client/src/components/filePicker/Dropzone.module.scss
+++ b/packages/client/src/components/filePicker/Dropzone.module.scss
@@ -8,7 +8,7 @@
     background: var(--grey-300);
     border: 3px dashed var(--grey-200);
     max-width: 500px;
-    color: var(--color-fg-main);
+    color: var(--grey-900);
     overflow: hidden;
     padding: 1rem;
     text-align: center;
