--- a/packages/client/src/components/imagePreview/index.module.scss
+++ b/packages/client/src/components/imagePreview/index.module.scss
@@ -4,7 +4,6 @@
   flex: 1;
   position: relative;
   user-select: none !important;
-  background: var(--color-bg-dark);
   display: flex;
   justify-content: center;
   align-items: center;
