--- a/packages/client/src/components/requirementsTable/index.module.scss
+++ b/packages/client/src/components/requirementsTable/index.module.scss
@@ -14,7 +14,7 @@
   }
 
   tr.error {
-    color: var(--color-bg-error);
+    color: var(--red-100);
   }
 
   tr:not(.error) td:first-child {
