--- a/packages/client/src/views/project/simple/settings/index.module.scss
+++ b/packages/client/src/views/project/simple/settings/index.module.scss
@@ -15,7 +15,7 @@
   border-radius: 5px;
   font-size: 0.8rem;
   border: 1px solid var(--red-900);
-  background: var(--color-bg-error);
+  background: var(--red-100);
   font-weight: bold;
   display: flex;
   align-items: center;
