--- a/packages/client/src/views/project/training/settings/index.module.scss
+++ b/packages/client/src/views/project/training/settings/index.module.scss
@@ -15,7 +15,7 @@
   border-radius: 5px;
   font-size: 0.8rem;
   color: var(--red-900);
-  background: var(--color-bg-error);
+  background: var(--red-100);
   font-weight: bold;
 }
 
