--- a/packages/client/src/views/setup/components/Item.module.scss
+++ b/packages/client/src/views/setup/components/Item.module.scss
@@ -89,7 +89,7 @@
 
     &.error {
       color: var(--red-900);
-      background: var(--color-bg-error);
+      background: var(--red-100);
     }
 
     &.incomplete {
